--- a/style.css
+++ b/style.css
@@ -80,3 +80,33 @@ input{
     margin-left: 12px;
     color: #999;   
 }
+
+/* forgot password */
+
+form p{
+    text-align: left;
+    font-size: 14px;
+}
+
+form p a{
+    text-decoration: none;
+    color: #3c00a0;
+}
+
+.btn-field button{
+    padding: 6px 24px;
+    margin-top: 25px;
+    border-radius: 25px;
+    border: 0;
+    background: #3c00a0;
+    color: #fff;
+    font-size: 14px;
+    margin-right: 4px;
+}
+
+ button:hover {
+    cursor: pointer;
+    color: #fff;
+    background: darkmagenta;
+}
+
