--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
     color: #3c00a0;
     margin-bottom: 60px;
     position: relative;
+    /* transition: 0.5s; */
 }
 
 /* underline for SignUp */
@@ -64,6 +65,9 @@
     border-radius: 3px;
     display: flex;
     align-items: center;
+    max-height: 65px;
+    transition: max-height 0.2s;
+    overflow: hidden;
 }
 
 input{
